--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,7 +94,7 @@ input {
     display: grid;
     text-align: center;
     padding: 3px;
-    margin: 0;
+    margin: 0 0 10px 0;
     width: 100%;
 }
 
